Externalización de rutas a las APIs, modificación del tiempo de sesión y solución de problema con certificados

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "ApiRestUrl": "https://localhost:9095/rest/api/",
+    "ApiSoapUrl": "https://localhost:8095/soap/api/user?wsdl",
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
 }
