--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
-    "ApiRestUrl": "https://localhost:9095/rest/api/",
-    "ApiSoapUrl": "https://localhost:8095/soap/api/user?wsdl",
+    "ApiRestUrl": "https://retrotrack-rest-api:9095/rest/api/",
+    "ApiSoapUrl": "https://retrotrack-soap-api:8095/soap/api/user?wsdl",
     "Logging": {
         "LogLevel": {
             "Default": "Information",
